src/main/metadata-au/objects/Vehicle_Inspection__c.object
<CustomObject>
    <description>Records all vehicle inspections done for a vehicle towards the end of a financial contract.</description>
    <fields>
        <fullName>Contract__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Contract</label>
        <referenceTo>Contract</referenceTo>
        <relationshipLabel>Vehicle Inspections</relationshipLabel>
        <relationshipName>Vehicle_Inspections</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Customer_Name__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Customer Name</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Vehicle Inspections</relationshipLabel>
        <relationshipName>Vehicle_Inspections</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Customer_Signature__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Customer Signature</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Date_of_inspection_Date__c</fullName>
        <label>Date of inspection (Date)</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Description__c</fullName>
        <label>Description of UFWT</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Inspection_Dealership__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Inspection Dealership</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Vehicle Inspections (Inspection Dealership)</relationshipLabel>
        <relationshipName>Vehicle_Inspections1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Mileage__c</fullName>
        <label>KMS</label>
        <precision>10</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Name_of_Inspector__c</fullName>
        <label>Name of Inspector</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Total_of_UFWT__c</fullName>
        <label>Total $ of UFWT</label>
        <precision>12</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Vehicle_Make__c</fullName>
        <description>Formula is not provided ,after receiving  formula need to update field</description>
        <formula>Text(Vehicle__r.Brand__c )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Vehicle Make</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Vehicle_Model__c</fullName>
        <description>Formula is not provided ,after receiving  formula need to update field</description>
        <formula>Text(Vehicle__r.Model__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Vehicle Model</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Vehicle__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Vehicle</label>
        <referenceTo>Vehicle__c</referenceTo>
        <relationshipLabel>Vehicle Inspections</relationshipLabel>
        <relationshipName>Vehicle_Inspections</relationshipName>
        <type>Lookup</type>
    </fields>
    <label>Vehicle Inspection</label>
    <nameField>
        <displayFormat>{000000}</displayFormat>
        <label>Vehicle Inspection</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Vehicle Inspections</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>